--- a/docs/releases/v0.1-alpha.md
+++ b/docs/releases/v0.1-alpha.md
@@ -23,7 +23,7 @@ Copyright (c) 2020-2021 Singapore Blockchain Innovation Program.
 - The current bug detection a general dataflow analysis framework, which can be
   instantiated into different analyses.
 
-- Currently, Discover supports 4 analysis:
+- Currently, Discover supports 4 analyses:
   + Pointer analysis: for computing aliasing and points-to information of
     pointers.
   + Range analysis: for computing a range of possible value
